# kwork_mcp

./: .env.example  .gitignore  Dockerfile.mcp  LICENSE  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
docs/: agent-tools.md  getting-started.md  tutorial.md
examples/: web_exchange_offer.py
source/kwork/: __init__.py  api.py  apk_extra_mixin.py  bot.py  client.py  event_parser.py  exceptions.py  openapi_mixin.py  py.typed
source/kwork/agent/: __init__.py  __main__.py  cli.py  config.py  mcp_server.py  registry.py  runner.py  serialize.py  tool_docs.py
tests/: test_agent_cli.py  test_agent_config.py  test_agent_errors.py  test_agent_mcp.py  test_agent_registry.py  test_agent_serialize.py  test_agent_tool_docs.py
