[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kwork"
version = "0.2.0"
description = "Async, typed Python client for kwork.ru (aiohttp + Pydantic) with WebSocket bot and web-flow helpers."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "kesha1225" },
]
keywords = [
    "kwork",
    "kwork.ru",
    "freelance",
    "marketplace",
    "api",
    "async",
    "asyncio",
    "aiohttp",
    "websocket",
    "bot",
    "pydantic",
    "typed",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp>=3.13.3",
    "pydantic>=2.12.5",
    "websockets>=15.0.1",
]

[project.optional-dependencies]
proxy = [
    "aiohttp-socks>=0.10.2",
]
mcp = [
    "mcp>=1.0.0",
]

[project.scripts]
kwork-agent = "kwork.agent.__main__:main"
kwork-mcp = "kwork.agent.__main__:main_mcp"

[project.urls]
Homepage = "https://github.com/kesha1225/pykwork"
Repository = "https://github.com/kesha1225/pykwork"
Issues = "https://github.com/kesha1225/pykwork/issues"
Documentation = "https://github.com/kesha1225/pykwork/blob/HEAD/docs/index.md"
Changelog = "https://github.com/kesha1225/pykwork/blob/HEAD/CHANGELOG.md"
Security = "https://github.com/kesha1225/pykwork/blob/HEAD/SECURITY.md"

[tool.setuptools]
packages = ["kwork", "kwork.agent", "kwork.schema"]

[tool.setuptools.package-dir]
"" = "source"

[tool.setuptools.package-data]
# PEP 561 marker file so downstream type checkers pick up inline annotations.
kwork = ["py.typed"]

[tool.ruff]
target-version = "py312"
line-length = 100

[dependency-groups]
dev = [
    "ruff>=0.14.7",
    "basedpyright>=1.29.0",
    "pytest>=8.0.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
    "pymdown-extensions>=10.8.0",
]

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportMissingTypeArgument = "warning"
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportAny = false
reportImplicitStringConcatenation = false
reportUnannotatedClassAttribute = false

[tool.pytest.ini_options]
# Keep credentialed integration checks out of default runs.
testpaths = ["tests"]
